Update dependencies for Java POJO example